...
        // Stop UIActivityIndicatorView
        [_loading stopAnimating];
        _loading.hidden = YES;
        
        // Show user alert
        UIAlertController * alert = [UIAlertController
                                      alertControllerWithTitle:@"Success"
                                      message:@"Yay, your data was saved in the cloud"
                                      preferredStyle:UIAlertControllerStyleAlert];

        UIAlertAction* okAction = [UIAlertAction
                                    actionWithTitle:@"Ok, cool!"
                                    style:UIAlertActionStyleDefault
                                   handler:^(UIAlertAction * action) {}];
        
        [alert addAction:okAction];
        [self presentViewController:alert animated:YES completion:nil];
        
...
